# Zach-trading-repo

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
backtest/: data_loader.py  engine.py  metrics.py  trades_loader.py
scripts/: robustness.py  run_backtest.py  walkforward.py
strategy/: bars.py  continuation_state_machine.py  fvg.py  htf.py  levels.py  params.py  pressure.py  sessions.py  sweep.py  sweep_state_machine.py  swings.py  vwap.py
tests/: conftest.py  test_bars.py  test_continuation.py  test_data_loader.py  test_engine.py  test_fvg.py  test_htf.py  test_levels.py  test_metrics.py  test_pressure.py  test_sessions.py  test_smoke.py  test_sweep.py  test_sweep_state_machine.py  test_swings.py  test_trades_loader.py  test_vwap.py
